# SEERS

./: .gitignore  .gitmodules  README.md  test.json
data/: README.md
progresscheck/: Batbayasgalan.md  Caleb_Kendra.md  Daniel_Bekele.md  Miles_Franck.md  README.md  alish_chhetri.md  jaclyn_pham.md  mordred_boulais.md
scripts/: README.md  pyproject.toml
scripts/analyzer/: (delete this)combined_result.json  (delete this)restructured_result.json  JaclynMutScore.json  JsonRestruct.py  ReworkPandaML.py  __init__.py  add_function_json.py  aeval.json  alish_result.json  average_mutscore_per_check.py  chasten-results-lazytracker-20240220233638-587ce68f4f84449683401972e5a4c69f.json  chasten_output.json  combined.py  combined_result.json  complete_output.json  jaclyn.py  json_restruct.py  main.py  new_output.json  new_output_with_functions.json  output.csv  output_with_functions.json  pandaML.py  parse_json.py  project_report.md  pyCicd_output.json  restructured_result.json  testFile.csv  test_sapient.py  testing.py  total_mutscore_average.py
scripts/analyzer/.ipynb_checkpoints/: 101_sorting_algorithm-checkpoint.json  RandomForestClassifier-checkpoint.ipynb
scripts/analyzer/Config/: allChecks.yml  checks.yml  config.yml  new_checks.yml  newer.yml  old_checks.yml
scripts/analyzer/Config/.ipynb_checkpoints/: allChecks-checkpoint.yml  new_checks-checkpoint.yml
scripts/analyzer/config/: old_checks.yml
scripts/analyzer/demo/fibonaccicreator copy/: .pylintrc  pyproject.toml
scripts/analyzer/demo/fibonaccicreator copy/src/: fibonacci.py  main.py
scripts/analyzer/demo/fibonaccicreator copy/tests/: test_fibonacci.py
scripts/analyzer/demo/intersection copy/: .pymarkdown.cfg  pyproject.toml
scripts/analyzer/demo/intersection copy/src/: main.py
scripts/analyzer/demo/intersection copy/test/: test_intersection.py
scripts/analyzer/demo/palindromechecker copy/: .pylintrc  .pymarkdown.cfg  pyproject.toml
scripts/analyzer/demo/palindromechecker copy/src/: main.py  palindrome.py  util.py
scripts/analyzer/demo/palindromechecker copy/test/: test_main.py  test_palindrome.py  test_util.py
scripts/analyzer/demo/primality/: .pymarkdown.cfg  pyproject.toml
scripts/analyzer/demo/primality/src/: main.py
scripts/analyzer/demo/primality/tests/: test_primality.py
scripts/analyzer/dummy_test/: .mutmut-cache  main.py  mutation.xml
scripts/analyzer/dummy_test/src/: __init__.py  main.py  main.py.bak
scripts/analyzer/dummy_test/test/: test_dummy.py
scripts/analyzer/json_analysis/: 101_intersection.json  101_palindrome.json  code_output.json  diagrams_output.json  dummy_project.json  multi_output.json  playground_output.json  pls_output.json  poetryize_output.json  trogon_output.json
scripts/analyzer/ml_models/: PredictionScripts.ipynb  Proved_Correlation.ipynb  RandomForestClassifier()_test.ipynb  RandomForestClassifier.ipynb  analysis.csv  database.csv  my_dataframe.csv  pattern_df.csv  sapientml.ipynb  supplement_df.csv
scripts/analyzer/ml_models/.ipynb_checkpoints/: PredictionScripts-checkpoint.ipynb  RandomForestClassifier()_test-checkpoint.ipynb  RandomForestClassifier-checkpoint.ipynb  analysis-checkpoint.csv  my_dataframe-checkpoint.csv  pattern_df-checkpoint.csv  rf_importance-checkpoint.csv  supplement_df-checkpoint.csv
scripts/analyzer/ml_models/outputs_mutationcategory/: 1_script.py  3_script.py  final_predict.py  final_script.out.json  final_script.py  final_train.py  training.pkl
scripts/analyzer/ml_models/outputs_mutationcategory/.ipynb_checkpoints/: 2_script-checkpoint.py  3_script-checkpoint.py
scripts/analyzer/ml_models/outputs_mutationscore/: 2_script.py  3_script.py  final_predict.py  final_script.py  final_train.py  training.pkl
scripts/analyzer/ml_models/outputs_mutationscore/.ipynb_checkpoints/: 1_script-checkpoint.py  final_script.out-checkpoint.json
scripts/analyzer/outputs/: new_output_with_functions.json  training.pkl
scripts/analyzer/results/: logging_output.json  new_output.json  pudb_output.json  pythonPoetry_output.json
scripts/automl/: runAutoML.py  testFile.csv  testFile.json
scripts/draft/: analyzer.py  chasten-results-lazytracker-20240219135848-f27410b9d18e438382fc83db4f838e82.json  junit2json_test.py  mutmutdiffparsers.py  output_with_functions.json  restructured_result.json  runningTools.py
