[tool.poetry]
name = "analyzer"
version = "0.0.0"
description = "Chasten and Mutation Analysis"
authors = ["Jaclyn Pham", "Daniel Bekele", "Caleb Kendra", "Mordred Boulais", "Alish Chhetri","Miles Franck"]

[tool.poetry.scripts]
analyzer = "analyzer.main:cli"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rich = "^13.4.2"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^8.0.1"
lazytracker = {path = "./analyzer/demo/lazytracker"}
pandas = "^2.2.1"
flake8 = "^7.0.0"
black = "^24.2.0"
mypy = "^1.8.0"
isort = "^5.13.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
